; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_lockdep.c_lockdep_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_lockdep.c_lockdep_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i64, i64 }

@current = common dso_local global %struct.TYPE_2__* null, align 8
@MAX_LOCK_DEPTH = common dso_local global i32 0, align 4
@nr_hardirq_chains = common dso_local global i64 0, align 8
@nr_softirq_chains = common dso_local global i64 0, align 8
@nr_process_chains = common dso_local global i64 0, align 8
@debug_locks = common dso_local global i32 0, align 4
@CHAINHASH_SIZE = common dso_local global i32 0, align 4
@chainhash_table = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lockdep_reset() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = load i64, i64* %1, align 8
  %4 = call i32 @raw_local_irq_save(i64 %3)
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 2
  store i64 0, i64* %8, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @MAX_LOCK_DEPTH, align 4
  %15 = sext i32 %14 to i64
  %16 = mul i64 %15, 4
  %17 = trunc i64 %16 to i32
  %18 = call i32 @memset(i32 %13, i32 0, i32 %17)
  store i64 0, i64* @nr_hardirq_chains, align 8
  store i64 0, i64* @nr_softirq_chains, align 8
  store i64 0, i64* @nr_process_chains, align 8
  store i32 1, i32* @debug_locks, align 4
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %29, %0
  %20 = load i32, i32* %2, align 4
  %21 = load i32, i32* @CHAINHASH_SIZE, align 4
  %22 = icmp slt i32 %20, %21
  br i1 %22, label %23, label %32

23:                                               ; preds = %19
  %24 = load i64, i64* @chainhash_table, align 8
  %25 = load i32, i32* %2, align 4
  %26 = sext i32 %25 to i64
  %27 = add nsw i64 %24, %26
  %28 = call i32 @INIT_LIST_HEAD(i64 %27)
  br label %29

29:                                               ; preds = %23
  %30 = load i32, i32* %2, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %2, align 4
  br label %19

32:                                               ; preds = %19
  %33 = load i64, i64* %1, align 8
  %34 = call i32 @raw_local_irq_restore(i64 %33)
  ret void
}

declare dso_local i32 @raw_local_irq_save(i64) #1

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i64) #1

declare dso_local i32 @raw_local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
